@@ -315,10 +315,12 @@ begin
     begin
       // we should cut at the matching close brackets
       //cutpos := NPos(')',s,openBracketsNum);
-      // give me the pos of the last closing bracket
-      cutpos := NPos(')',s,closeBracketsNum);
-      Expression := copy(s,1,cutpos-1);
-      Remaining := Remaining + copy(s,cutpos,length(s));;
+      // give me the pos of the last matching closing bracket
+      cutpos := NPos(')',s,openBracketsNum);
+      // get it with the closing bracket
+      Expression := copy(s,1,cutpos);
+      // get the rest
+      Remaining := Remaining + copy(s,cutpos+1,length(s));;
     end
     else
     begin
